<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright © 2015.
  ~ "THE BEER-WARE LICENSE" (Revision 42):
  ~ <s133235@student.dtu> wrote this file. As long as you retain this notice you
  ~ can do whatever you want with this stuff. If we meet some day, and you think
  ~ this stuff is worth it, you can buy me a beer in return - Rudy Alex Kohn
  ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  -->

<RelativeLayout
    android:id="@+id/menu_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reaper"
    android:clickable="false"
    android:focusableInTouchMode="false"
    android:orientation="vertical"
    tools:context=".activities.MenuActivity">

    <com.undyingideas.thor.skafottet.views.StarField
        android:id="@+id/sf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:background="#00ffffff"/>

    <ImageView
        android:id="@+id/menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/menu_image_logo"
        android:layout_alignRight="@+id/menu_image_logo"
        android:layout_centerHorizontal="true"
        android:background="@drawable/title_text"
        android:clickable="true"
        android:contentDescription="@string/contentDescriptionMenuTitle"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/menu_button_play"
            style="@style/menu_button_style"
            android:layout_marginTop="125dp"
            android:background="@drawable/button_play"
            android:contentDescription="@string/contentDescriptionMenuButtonPlay"/>

        <ImageView
            android:id="@+id/menu_button_highscore"
            style="@style/menu_button_style"
            android:background="@drawable/button_highscore"
            android:contentDescription="@string/contentDescriptionMenuHighscore"/>

        <ImageView
            android:id="@+id/menu_button_word_lists"
            style="@style/menu_button_style"
            android:background="@drawable/button_ordlister"
            android:contentDescription="@string/contentDescriptionMenuWordLists"/>

        <ImageView
            android:id="@+id/menu_button_settings"
            style="@style/menu_button_style"
            android:background="@drawable/button_settings"
            android:contentDescription="@string/contentDescriptionMenuSettings"/>

        <ImageView
            android:id="@+id/menu_button_about"
            style="@style/menu_button_style"
            android:background="@drawable/button_about"
            android:contentDescription="@string/contentDescriptionMenuAbout"/>

        <ImageView
            android:id="@+id/menu_button_help"
            style="@style/menu_button_style"
            android:background="@drawable/button_help"
            android:contentDescription="@string/contentDescriptionMenuHelp"/>

        <ImageView
            android:id="@+id/menu_button_login_out"
            style="@style/menu_button_style"
            android:background="@drawable/button_login"
            android:contentDescription="@string/contentDescriptionMenuLogInOut"/>

        <ImageView
            android:id="@+id/menu_button_quit"
            style="@style/menu_button_style"
            android:layout_marginBottom="75dp"
            android:background="@drawable/button_end"
            android:contentDescription="@string/contentDescriptionMenuQuit"/>

        <LinearLayout
            android:id="@+id/LoginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/menu_image_logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/game_end_lost"
                android:clickable="false"
                android:contentDescription="Logo"/>

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="4dp"
                android:clickable="false"
                android:contextClickable="true"
                android:text="login"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textIsSelectable="false"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>