<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Rudy Alex Kohn [s133235@student.dtu.dk]
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<com.undyingideas.thor.skafottet.views.StarField
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_trans_black_strong"
    android:clickable="false"
    android:focusableInTouchMode="false"
    android:orientation="vertical"
    tools:context=".activities.GameActivity">

    <ImageView
        android:id="@+id/menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:alpha="0.7"
        android:foregroundGravity="top"
        android:clickable="true"
        android:contentDescription="@string/contentDescriptionMenuTitle"
        android:src="@drawable/skafottet_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/menu_button_play"
            android:layout_marginTop="125dp"
            style="@style/menu_button_style"
            android:background="@drawable/menu_button_shape">

            <com.undyingideas.thor.skafottet.views.AutoScaleTextView
                android:id="@+id/menu_button_play_text"
                style="@style/menu_button_style_text"
                android:text="@string/menu_button_play"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu_button_highscore"
            style="@style/menu_button_style"
            android:background="@drawable/menu_button_shape">

            <com.undyingideas.thor.skafottet.views.AutoScaleTextView
                android:id="@+id/menu_button_highscore_text"
                style="@style/menu_button_style_text"
                android:text="@string/menu_button_highscore"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu_button_word_lists"
            style="@style/menu_button_style"
            android:background="@drawable/menu_button_shape">

            <com.undyingideas.thor.skafottet.views.AutoScaleTextView
                android:id="@+id/menu_button_word_lists_text"
                style="@style/menu_button_style_text"
                android:text="@string/menu_button_word_lists"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu_button_settings"
            style="@style/menu_button_style"
            android:background="@drawable/menu_button_shape">

            <com.undyingideas.thor.skafottet.views.AutoScaleTextView
                android:id="@+id/menu_button_settings_text"
                style="@style/menu_button_style_text"
                android:text="@string/menu_button_settings"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu_button_about"
            style="@style/menu_button_style"
            android:background="@drawable/menu_button_shape">

            <com.undyingideas.thor.skafottet.views.AutoScaleTextView
                android:id="@+id/menu_button_about_text"
                style="@style/menu_button_style_text"
                android:text="@string/menu_button_about"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu_button_help"
            style="@style/menu_button_style"
            android:background="@drawable/menu_button_shape">

            <com.undyingideas.thor.skafottet.views.AutoScaleTextView
                android:id="@+id/menu_button_help_text"
                style="@style/menu_button_style_text"
                android:text="@string/menu_button_help"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu_button_login_out"
            style="@style/menu_button_style"
            android:background="@drawable/menu_button_shape">

            <com.undyingideas.thor.skafottet.views.AutoScaleTextView
                android:id="@+id/menu_button_login_out_text"
                style="@style/menu_button_style_text"
                android:text="@string/menu_button_login_in"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menu_button_quit"
            style="@style/menu_button_style"
            android:background="@drawable/menu_button_shape">

            <com.undyingideas.thor.skafottet.views.AutoScaleTextView
                android:id="@+id/menu_button_quit_text"
                style="@style/menu_button_style_text"
                android:text="@string/menu_button_quit"/>
        </RelativeLayout>

        <com.hanks.htextview.HTextView
            android:id="@+id/menu_buttom_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </LinearLayout>

</com.undyingideas.thor.skafottet.views.StarField>