<!--
  ~ Copyright 2016 Rudy Alex Kohn [s133235@student.dtu.dk]
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    android:id="@+id/linear_layout_login_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/death"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <ImageView
        android:id="@+id/iv_logo_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="@dimen/lists_title_bottom_margin"
        android:contentDescription="@string/image_view_logo_image"
        android:src="@drawable/icon"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/lists_title_bottom_margin"
        app:hintTextAppearance="@style/HintText">

        <AutoCompleteTextView
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/edit_text_password"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/colorAccent"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/login_buttons_text_size"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        app:hintTextAppearance="@style/HintText">

        <AutoCompleteTextView
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:hint="@string/hint_enter_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/colorAccent"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/login_buttons_text_size"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:id="@+id/login_button_reset_password"
            style="@style/menu_button_style"
            android:layout_margin="10dp"
            android:background="@drawable/menu_button_shape">

            <com.undyingideas.thor.skafottet.views.AutoScaleTextView
                android:id="@+id/login_button_reset_password_text"
                style="@style/menu_button_style_text"
                android:text="Glemt"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_button_change_password"
            style="@style/menu_button_style"
            android:layout_margin="10dp"
            android:background="@drawable/menu_button_shape">

            <com.undyingideas.thor.skafottet.views.AutoScaleTextView
                android:id="@+id/login_button_change_password_text"
                style="@style/menu_button_style_text"
                android:text="Skift"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_with_password"
        style="@style/menu_button_style"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        android:background="@drawable/menu_button_shape">

        <com.undyingideas.thor.skafottet.views.AutoScaleTextView
            android:id="@+id/login_with_password_text"
            style="@style/menu_button_style_text"
            android:text="@string/button_signin_with_password"/>
    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_with_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dont_have_account"/>

        <com.undyingideas.thor.skafottet.views.UnderlinedTextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSignUpPressed"
            android:text="@string/button_create_account"/>
    </LinearLayout>
</LinearLayout>
