<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Rudy Alex Kohn
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:orientation="vertical"
                android:weightSum="10">

    <ImageView
        android:id="@+id/end_game_image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/end_game_text_view_top"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignTop="@+id/end_game_lower_status_marquee_view"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/contentDescriptionEndResultImage"/>

    <com.romainpiel.shimmer.ShimmerTextView
        android:id="@+id/end_game_text_view_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="38dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/end_game_lower_status_marquee_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/end_game_text_view_top">
    </TextView>

    <TextView
        android:id="@+id/end_game_lower_status_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do."
        android:textSize="15sp"
        tools:ignore="HardcodedText"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/end_game_button_new_game"
            style="@style/menu_button_style"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_new_game"
            android:contentDescription="@string/contentDescriptionEndNewGameButton"
            android:scaleType="centerCrop">
        </ImageView>

        <ImageView
            android:id="@+id/end_game_button_main_menu"
            style="@style/menu_button_style"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_main_menu"
            android:contentDescription="@string/contentDescriptionEndMainMenuButton">
        </ImageView>

    </LinearLayout>
</RelativeLayout>